Addressed commets