@@ -28,9 +28,7 @@ class EntityAttributeMappingTest {
   void returnsMappingFromConfig() {
     EntityAttributeMapping attributeMapping =
         new EntityAttributeMapping(
-            this.mockAttributeClient,
-            Map.of("some-id", "attributes.some-key"),
-            Collections.emptyMap());
+            this.mockAttributeClient, Map.of("some-id", "attributes.some-key"));
 
     assertEquals(
         Optional.of("attributes.some-key"),
@@ -44,8 +42,7 @@ class EntityAttributeMappingTest {
   void returnsMappingFromAttributeService() {
     when(mockRequestContext.call(any())).thenCallRealMethod();
     EntityAttributeMapping attributeMapping =
-        new EntityAttributeMapping(
-            this.mockAttributeClient, Collections.emptyMap(), Collections.emptyMap());
+        new EntityAttributeMapping(this.mockAttributeClient, Collections.emptyMap());
     AttributeMetadata sourcelessMetadata =
         AttributeMetadata.newBuilder().setKey("some-key").build();
     when(this.mockAttributeClient.get("some-id")).thenReturn(Single.just(sourcelessMetadata));
@@ -68,8 +65,7 @@ class EntityAttributeMappingTest {
   void returnsEmptyIfNoMapping() {
     when(mockRequestContext.call(any())).thenCallRealMethod();
     EntityAttributeMapping attributeMapping =
-        new EntityAttributeMapping(
-            this.mockAttributeClient, Collections.emptyMap(), Collections.emptyMap());
+        new EntityAttributeMapping(this.mockAttributeClient, Collections.emptyMap());
     when(this.mockAttributeClient.get("some-id")).thenReturn(Single.error(new RuntimeException()));
 
     // Empty result, since attribute client threw error
